// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestResultInputForm should render with a value 1`] = `
<form
  className="usa-form"
>
  <h4
    className="prime-radio__title"
  >
     SARS-CoV-2 Results 
  </h4>
  <fieldset
    className="usa-fieldset prime-radios"
  >
    <legend
      className="usa-legend usa-sr-only"
    >
      Test result
    </legend>
    <div
      className="usa-form-group"
    >
      <div
        className="usa-radio"
      >
        <input
          checked={true}
          className="usa-radio__input"
          disabled={false}
          id="radio-test-1_POSITIVE_0"
          name="covid-test-result-5d315d18-82f8-4025-a051-1a509e15c880"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="POSITIVE"
        />
        <label
          className="usa-radio__label"
          htmlFor="radio-test-1_POSITIVE_0"
        >
          Positive (+)
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input"
          disabled={false}
          id="radio-test-1_NEGATIVE_1"
          name="covid-test-result-5d315d18-82f8-4025-a051-1a509e15c880"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="NEGATIVE"
        />
        <label
          className="usa-radio__label"
          htmlFor="radio-test-1_NEGATIVE_1"
        >
          Negative (-)
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input"
          disabled={false}
          id="radio-test-1_UNDETERMINED_2"
          name="covid-test-result-5d315d18-82f8-4025-a051-1a509e15c880"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="UNDETERMINED"
        />
        <label
          className="usa-radio__label"
          htmlFor="radio-test-1_UNDETERMINED_2"
        >
          Inconclusive
        </label>
      </div>
    </div>
  </fieldset>
  <div
    className="prime-test-result-submit"
  >
    <button
      className="usa-button usa-button--outline"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`TestResultInputForm should render without a value 1`] = `
<form
  className="usa-form"
>
  <h4
    className="prime-radio__title"
  >
     SARS-CoV-2 Results 
  </h4>
  <fieldset
    className="usa-fieldset prime-radios"
  >
    <legend
      className="usa-legend usa-sr-only"
    >
      Test result
    </legend>
    <div
      className="usa-form-group"
    >
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input"
          disabled={false}
          id="radio-test-1_POSITIVE_0"
          name="covid-test-result-5d315d18-82f8-4025-a051-1a509e15c880"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="POSITIVE"
        />
        <label
          className="usa-radio__label"
          htmlFor="radio-test-1_POSITIVE_0"
        >
          Positive (+)
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input"
          disabled={false}
          id="radio-test-1_NEGATIVE_1"
          name="covid-test-result-5d315d18-82f8-4025-a051-1a509e15c880"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="NEGATIVE"
        />
        <label
          className="usa-radio__label"
          htmlFor="radio-test-1_NEGATIVE_1"
        >
          Negative (-)
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input"
          disabled={false}
          id="radio-test-1_UNDETERMINED_2"
          name="covid-test-result-5d315d18-82f8-4025-a051-1a509e15c880"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="UNDETERMINED"
        />
        <label
          className="usa-radio__label"
          htmlFor="radio-test-1_UNDETERMINED_2"
        >
          Inconclusive
        </label>
      </div>
    </div>
  </fieldset>
  <div
    className="prime-test-result-submit"
  >
    <button
      className="usa-button usa-button--outline usa-button-disabled"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
